# Bioinformatics_Courses_Demo

./: .gitignore  README.md
BLAST/: .gitignore  CLAUDE.md  README.md  REMOTE_BLAST_GUIDE.md  brca1_demo_db.phr  brca1_demo_db.pin  brca1_demo_db.pjs  brca1_demo_db.psq  pixi.toml
BLAST/data/: BRCA1_zink_finger.prot  _Users_hugodong_Documents_ACADEMIC_WORKSPACE_01_TEACHING_PORTFOLIO_Current_Semester_2025-2026-S1_BIOINFO_Bioinfomatics_Lectures_BIOINFO_Demo_BLAST_data_brca1_protein_proper  brca1_protein.fasta  brca1_sequence.fasta  egfr_protein.fasta
BLAST/results/: brca1_blast_results.txt  remote_blast_advanced_20251114_161838.xml
BLAST/scripts/: biopython_remote_blast.py  blast_demo.py  blast_demo_simple.py  remote_blast_demo.py  run_blast_cli.py  utils.py
BLAST/tests/: __init__.py  conftest.py  test_biopython_remote_blast.py  test_blast_demo.py  test_remote_blast_demo.py  test_run_blast_cli.py  test_utils.py
BLAST/tests/data/: test_query.fasta  test_results_tabular.txt
agent/test_glm/: EGFR_Inhibitor_Discovery_Report.md  LLM_Agent_Implementation_Evaluation.md  README.md  egfr_inhibitor_discovery.py  environment.yml  get_egfr_structure.py  pyproject.toml  run_egfr_discovery.py  workflow_track.md
database_construction_demo/: data_schema.md
md_simulation_analysis/: CLAUDE.md  Course_Bioinformatics_Demo_md_simulation_analysis.ipynb  pixi.toml
pdb_query/: pdb_query_CN.ipynb  pixi.toml
protein_ligand_docking_analysis/: README.md  pixi.toml  protein_ligand_docking_CN.ipynb
single_cell_analysis/: Course_Bioinformatics_Demo_Scanpy_CN.ipynb  Course_Bioinformatics_Demo_Scanpy_EN.ipynb  Course_Bioinformatics_Demo_scvi-tools_CN.ipynb  Course_Bioinformatics_Demo_scvi-tools_EN.ipynb
