[project]
name = "egfr-inhibitor-discovery"
version = "0.1.0"
description = "Comprehensive EGFR inhibitor discovery workflow for lung cancer treatment"
authors = [
    {name = "Claude Code Assistant", email = "claude@anthropic.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "requests>=2.25.0",
    "tqdm>=4.62.0",
    "rdkit>=2023.3.2",
    "datamol>=0.10.0",
    "biopython>=1.79",
    "chembl-webresource-client>=0.10.8",
    "rcsbsearch>=0.1.1",
    "openmm>=7.7.0",
    "mdtraj>=1.9.7",
    "nglview>=3.0.3",
    "jupyterlab>=3.4.0",
    "ipywidgets>=7.7.0",
    "plotly>=5.10.0",
    "scikit-learn>=1.1.0",
    "scipy>=1.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950"
]

docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi]
environment = "default"
channels = ["conda-forge", "bioconda"]

[tool.pixi.dependencies]
# Additional conda-forge packages that might not be on PyPI
rdkit = ">=2023.3.2"
openmm = ">=7.7.0"
mdtraj = ">=1.9.7"

[tool.pixi.pypi-dependencies]
# PyPI packages
numpy = ">=1.21.0"
pandas = ">=1.3.0"
matplotlib = ">=3.5.0"
seaborn = ">=0.11.0"
requests = ">=2.25.0"
tqdm = ">=4.62.0"
datamol = ">=0.10.0"
biopython = ">=1.79"
chembl-webresource-client = ">=0.10.8"
rcsbsearch = ">=0.1.1"
nglview = ">=3.0.3"
jupyterlab = ">=3.4.0"
ipywidgets = ">=7.7.0"
plotly = ">=5.10.0"
scikit-learn = ">=1.1.0"
scipy = ">=1.9.0"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["egfr_inhibitor_discovery"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=egfr_inhibitor_discovery",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]